[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["a.zubchyk <Sanch13sanch@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^1.4.45"
emoji = "^2.2.0"
telebot = "^0.0.4"
pytelegrambotapi = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
